# optrand

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  TODO.rst  build.sh  docker-setup.sh  pvss-sec0.conf  pvss-sec1.conf  pvss-sec2.conf
.devcontainer/: Dockerfile  devcontainer.json
aws/: do_run.sh  download-setup.sh  fabfile.py  parse_log_file.py  settings.json
aws (1)/: do_setup.sh  ips.txt  setup.sh
aws/benchmark/: commands.py  config.py  instance.py  remote.py  settings.py  utils.py
crypto/: CMakeLists.txt  Makefile
crypto/bench/: CMakeLists.txt  Makefile
crypto/include/crypto/pvss/: Aggregation.hpp  DecompProof.hpp  Decryption.hpp  Dleq.hpp  Factory.hpp  PVSS_Sharing.hpp  PolyOps.hpp  Precomputes.hpp  Serialization.hpp  Utils.hpp  pvss.hpp
crypto/src/: CMakeLists.txt  Makefile  PVSS.cpp
crypto/src/pvss/: CMakeLists.txt  Makefile  PVSS.cpp
crypto/test/: Makefile  TestPrint.cpp
crypto2/: CMakeLists.txt  CTestTestfile.cmake  Makefile
crypto2/bench/: CTestTestfile.cmake  Makefile
crypto2/src/: CTestTestfile.cmake  Makefile
crypto2/src/pvss/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PVSS.cpp
crypto2/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestPrint.cpp
depends/libff/: CMakeLists.txt
examples/: CMakeLists.txt  hotstuff_app.cpp  hotstuff_client.cpp
include/: erasure.h
include/hotstuff/: client.h  consensus.h  crypto.h  entity.h  hotstuff.h  liveness.h
scripts/: gen_conf.py  run_demo.sh
src/: consensus.cpp  crypto.cpp  entity.cpp  erasure.cpp  hotstuff.cpp  pvss_setup.cpp
(+12 files in other folders)
